@@ -4,3 +4,11 @@ Brian Pellin
 Johan Berts - search patches
 Tobias Selig - icon support
 Tolga Onbay - password generator
+
+Translations:
+Diego Pierotto - Italian
+Laurent, Norman Obry - French
+Maciej Bieniek - Polish
+Максим Сёмочкин - Russian
+MaWi - German
+yslandro - Norwegian Nynorsk
