@@ -1,4 +1,5 @@
   * Support Android 2.2 backup manager
+  * Add Polish translations
 
 KeePassdroid (1.8.1)
   * Android 1.5 compatibility fixes
